feat: reimplemented login page

--- a/apoe/app.json
+++ b/apoe/app.json
@@ -23,7 +23,13 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "bundleIdentifier":"com.hng.apoe4-ios",
+      "supportsTablet": true,
+      "config": {
+        "googleSignIn": {
+          "reservedClientId": "com.googleusercontent.apps.376542755138-r0h1n3bbgj859rf7rbrl7c47euh0khia"
+        }
+      }
     }
   }
 }
