--- a/package.json
+++ b/package.json
@@ -1,30 +1,41 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "apoe4",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "eject": "expo eject",
-    "test": "node ./node_modules/jest/bin/jest.js --watchAll"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
   },
   "dependencies": {
-    "@expo/samples": "2.1.1",
-    "expo": "^32.0.0",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "@react-native-community/async-storage": "^1.3.3",
+    "asap": "^2.0.6",
+    "d3": "^5.9.2",
+    "d3-shape": "^1.3.5",
+    "global": "^4.3.2",
+    "react": "16.8.3",
+    "react-native": "0.59.5",
+    "react-native-fab-pie": "^1.0.0",
+    "react-native-fontawesome": "^6.0.1",
+    "react-native-gesture-handler": "^1.2.1",
+    "react-native-splash-screen": "^3.2.0",
+    "react-native-vector-icons": "^6.4.2",
+    "react-navigation": "^3.9.1",
     "react-dom": "^16.0.0",
     "react-native-elements": "1.1.0",
-    "react-native-fab-pie": "1.0.0",
     "react-native-svg-charts": "5.2.0",
-    "react-navigation": "3.0.0-rc.5",
-    "react-svg-donut-chart": "1.1.0"
+    "react-svg-donut-chart": "1.1.0",
+    "react-test-renderer": "16.8.6"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0",
-    "jest-expo": "^32.0.0"
+    "@babel/core": "^7.4.4",
+    "@babel/runtime": "^7.4.4",
+    "babel-jest": "^24.7.1",
+    "eslint-config-rallycoding": "^3.2.0",
+    "jest": "^24.7.1",
+    "metro-react-native-babel-preset": "^0.53.1",
+    "react-test-renderer": "16.8.3"
   },
-  "private": true
+  "jest": {
+    "preset": "react-native"
+  }
 }
